server/fandogh/media/ingress_template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: nginxservice
    servicePort: 80
  rules:
  - host: 'nginx.fandogh.cloud'
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxservice
          servicePort: 80
